--- a/client/src/css/base/_panel.scss
+++ b/client/src/css/base/_panel.scss
@@ -1,17 +1,17 @@
 .panel {
-  border-radius: 5px;
+  border-radius: 0.5rem;
   background: white;
   box-shadow: 0 0 26px rgba(0, 0, 0, 0.13);
-  margin: 1em;
+  margin: 1rem;
   display: flex;
   flex-direction: column;
   h3 {
     color: black;
     font-weight: 400;
-    font-size: 1em;
+    font-size: 1rem;
     text-transform: capitalize;
-    margin-left: 1em;
-    padding-top: 0.25em;
+    margin-left: 1rem;
+    padding-top: 0.25rem;
   }
   ul {
     -moz-column-count: 2;
@@ -20,24 +20,24 @@
     -webkit-column-gap: 10px;
     column-count: 2;
     column-gap: 10px;
-    width: 50%;
-    padding-left: 1em;
+    width: 100%;
+    padding-left: 1rem;
     float: left;
   }
   ul li {
-    font-size: 0.75em;
-    padding: 0.25em;
+    font-size: 0.75rem;
+    padding: 0.25rem;
     width: 100%;
   }
   a {
     text-decoration: none;
-    font-size: 0.5em;
+    font-size: 0.5rem;
   }
 }
 .panel > p {
-  font-size: 0.7em;
+  font-size: 0.7rem;
   margin-top: 0;
-  margin-left: 1.5em;
+  margin-left: 1.5rem;
   display: inline-block;
 }
 .panel .balance {
@@ -47,24 +47,24 @@
 .panel .balance::before {
   content: "\2022";
   color: $purple;
-  margin-right: 0.25em;
+  margin-right: 0.25rem;
 }
 .top-dashboard {
   display: grid;
-  grid-gap: 0.25em;
+  grid-gap: 0.25rem;
   grid-template-columns: auto;
   grid-template-rows: auto;
 }
 .bottom-dashboard {
   display: grid;
-  grid-gap: 0.25em;
+  grid-gap: 0.25rem;
   grid-template-columns: auto;
   grid-template-rows: auto;
 }
 .panel .name {
-  font-size: 1.25em;
-  padding: 1em 0;
-  margin: 0 0.75em 0.75em;
+  font-size: 1.25rem;
+  padding: 1rem 0;
+  margin: 0 0.75rem 0.75rem;
   border-bottom: 1px solid #f6f6f6;
   width: 55%;
 }
@@ -81,14 +81,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 0.5em;
+  padding-top: 0.5rem;
 }
 .acc-options {
   display: flex;
   justify-content: space-between;
 }
 .more-details {
-  padding-left: 2.2em;
+  padding-left: 2.2rem;
   color: #a8a8a8;
 }
 .transactions {
@@ -98,10 +98,10 @@
   display: flex;
   justify-content: space-between;
   width: 95%;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.5rem;
   border-bottom: 1px solid #f6f6f6;
   p {
-    margin: 0.75em;
+    margin: 0.75rem;
   }
 }
 .msg-board .row:last-child,
@@ -110,9 +110,9 @@
 }
 .transactions p,
 .msg-board p {
-  font-size: 0.7em;
+  font-size: 0.7rem;
   text-align: left;
-  margin: 0.5em;
+  margin: 0.5rem;
 }
 .msg-board {
   margin: 0 auto;
@@ -123,7 +123,7 @@
   }
   .name {
     text-align: right;
-    font-size: 0.6em;
+    font-size: 0.6rem;
     border-bottom: none;
     align-items: center;
   }
@@ -162,23 +162,66 @@ circle {
 .plaid {
   color: $plum;
 }
-@media (min-width: 450px) {
+@media (min-width: 368px) {
   .top-dashboard {
-    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
   }
+  .chart svg {
+    display: flex;
+    margin: auto;
+  }
   .bottom-dashboard {
-    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
     height: calc(55vh);
+  }
+  .panel.bottom h4 {
+    display: flex;
+    justify-content: center;
+  }
+  .line,
+  .cus-credit-card {
+    display: none;
+  }
+  .acc-options p {
+    display: none;
+  }
+  .acc-options,
+  .card-button {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 768px) {
+  .bottom-dashboard {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 860px) {
   .top-dashboard {
+    grid-template-columns: repeat(2, 1fr);
     width: 90%;
   }
+  .panel ul {
+    width: 50%;
+  }
+
   .bottom {
     text-align: center;
+  }
+  .bottom-dashboard {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .line,
+  .cus-credit-card {
+    display: block;
+  }
+  .acc-options p {
+    display: block;
+  }
+  .acc-options,
+  .card-button {
+    flex-direction: row;
   }
 }
